<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldDate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/date"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconContentDescription="@string/date"
        app:startIconDrawable="@drawable/outline_event_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textColorHint="#757575" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldWxkey"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/wxkey"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldDate"
        app:startIconContentDescription="@string/wxkey"
        app:startIconDrawable="@drawable/outline_vpn_key_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputWxkey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldParameter"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/parameter"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldWxkey"
        app:startIconContentDescription="@string/parameter"
        app:startIconDrawable="@drawable/outline_view_headline_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputParameter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#757575" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/outlinedButtonSubmit"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        app:icon="@drawable/outline_login_24"
        app:layout_constraintEnd_toEndOf="@+id/textFieldParameter"
        app:layout_constraintStart_toStartOf="@+id/textFieldParameter"
        app:layout_constraintTop_toBottomOf="@+id/textFieldParameter" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loadingCircul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/textFieldParameter"
        app:layout_constraintStart_toStartOf="@+id/textFieldParameter"
        app:layout_constraintTop_toBottomOf="@+id/outlinedButtonSubmit" />

    <TextView
        android:id="@+id/text_view_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/loading"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/loadingCircul"
        app:layout_constraintStart_toStartOf="@+id/loadingCircul"
        app:layout_constraintTop_toBottomOf="@+id/loadingCircul" />

    <TextView
        android:id="@+id/text_view_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loadingCircul" />

</androidx.constraintlayout.widget.ConstraintLayout>